m8s/moodle/moodle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle
  labels:
    app: moodle
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: moodle
    tier: frontend
